--- a/bower.json
+++ b/bower.json
@@ -15,13 +15,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.11",
-    "angular-animate": "~1.2.11",
+    "polymer": "*",
     "longest": "*",
     "mrmrs-colors": "*",
-    "normalize-css": "~2.1.3",
-    "typeplate": "~1.1.2",
-    "angularLocalStorage": "~0.1.7",
-    "font-awesome": "~4.0.3"
+    "normalize-css": "~2.1.3"
   }
 }
