--- a/bower.json
+++ b/bower.json
@@ -15,9 +15,11 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "*",
+    "platform": "Polymer/platform#master",
+    "polymer": "~0.2.3",
     "longest": "*",
     "mrmrs-colors": "*",
-    "normalize-css": "~2.1.3"
+    "normalize-css": "~2.1.3",
+    "core-ajax": "polymer/core-ajax#~0.3.3"
   }
 }
