--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
     "url": "git://github.com/filtercake/tazz.git"
   },
   "devDependencies": {
-    "csscomb": "*",
-    "grunt": "*",
-    "grunt-concurrent": "*",
-    "grunt-contrib-coffee": "*",
-    "grunt-contrib-connect": "*",
-    "grunt-contrib-copy": "*",
-    "grunt-contrib-jade": "*",
-    "grunt-contrib-jshint": "*",
-    "grunt-contrib-sass": "*",
-    "grunt-contrib-watch": "*"
+    "csscomb": "^3.0.0-5",
+    "grunt": "^0.4.5",
+    "grunt-concurrent": "^0.5.0",
+    "grunt-contrib-coffee": "^0.10.1",
+    "grunt-contrib-connect": "^0.8.0",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-jade": "^0.12.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-sass": "^0.7.3",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-csscomb": "^3.0.0-1"
   },
   "dependencies": {}
 }
