--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-contrib-coffee": "^0.10.1",
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-csslint": "^0.2.0",
     "grunt-contrib-jade": "^0.12.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-sass": "^0.7.3",
