--- a/.csslintrc
+++ b/.csslintrc
@@ -1,34 +1,34 @@
 {
-  "adjoining-classes": false,
+  "adjoining-classes": true,
   "box-model": true,
-  "box-sizing": true,
+  "box-sizing": false,
   "bulletproof-font-face": true,
   "compatible-vendor-prefixes": true,
-  "display-property-grouping": false,
+  "display-property-grouping": true,
   "duplicate-background-images": true,
-  "duplicate-properties": false,
-  "empty-rules": false,
+  "duplicate-properties": true,
+  "empty-rules": true,
   "fallback-colors": false,
-  "floats": false,
-  "font-faces": false,
-  "font-sizes": false,
-  "gradients": false,
-  "ids": false,
-  "import": true,
+  "floats": true,
+  "font-faces": true,
+  "font-sizes": true,
+  "gradients": true,
+  "ids": 2,
+  "import": 2,
   "important": 2,
   "known-properties": true,
   "non-link-hover": false,
-  "outline-none": false,
-  "overqualified-elements": false,
-  "qualified-headings": false,
-  "regex-selectors": true,
-  "shorthand": true,
-  "star-property-hack": true,
-  "text-indent": false,
-  "underscore-property-hack": true,
-  "vendor-prefix": false,
-  "unique-headings": false,
+  "outline-none": true,
+  "overqualified-elements": 2,
+  "qualified-headings": true,
+  "regex-selectors": 2,
+  "shorthand": false,
+  "star-property-hack": 2,
+  "text-indent": true,
+  "underscore-property-hack": 2,
+  "vendor-prefix": true,
+  "unique-headings": true,
   "universal-selector": true,
-  "unqualified-attributes": false,
+  "unqualified-attributes": true,
   "zero-units": true
 }
