--- a/bower.json
+++ b/bower.json
@@ -15,11 +15,10 @@
     "tests"
   ],
   "dependencies": {
-    "platform": "Polymer/platform#master",
-    "polymer": "~0.2.3",
+    "polymer": "^0.3.3",
     "longest": "*",
     "mrmrs-colors": "*",
-    "normalize-css": "~2.1.3",
-    "core-ajax": "polymer/core-ajax#~0.3.3"
+    "normalize-css": "^3.0.1",
+    "core-ajax": "Polymer/core-ajax#~0.3.3"
   }
 }
